--- a/style.css
+++ b/style.css
@@ -4,10 +4,14 @@ body {
   padding: 0;
 }
 
+/* Navigation */
+
 nav {
   text-align: center;
   padding: 20px;
 }
+
+/* Hero Section */
 
 .hero-section {
   display: grid;
@@ -18,7 +22,6 @@ nav {
 
 .hero-item {
   text-align: center;
-  /* margin-top: 20px; */
 }
 
 .hero-item h1 {
@@ -56,12 +59,14 @@ nav {
   margin-top: 50px;
   justify-content: center;
 }
+
 .zero-one-container .vl {
   border-left: 1px solid black;
   text-align: center;
   padding: 50%;
   margin-left: 50%;
 }
+
 .zero-one-container span {
   border: 1px solid rgb(0, 0, 0);
   width: fit-content;
@@ -104,28 +109,17 @@ nav {
 }
 .zero-two-container .vl {
   border-left: 1px solid black;
-  /* height: 50px; */
   text-align: center;
   padding: 50%;
   margin-left: 50%;
 }
+
 .zero-two-container span {
   border: 1px solid rgb(0, 0, 0);
   width: fit-content;
   padding: 10px;
   border-radius: 100%;
 }
-
-/* .zero-two {
-  text-align: center;
-  padding: 50px;
-}
-
-.zero-two span {
-  border: 2px solid rgb(0, 0, 0);
-  border-radius: 50%;
-  padding: 10px;
-} */
 
 footer {
   background-size: cover;
