--- a/style.css
+++ b/style.css
@@ -217,6 +217,8 @@ footer .footer-item {
     width: 100%;
     position: fixed;
     top: 0;
+    padding: 0;
+    padding-top: 20px;
   }
 
   .hero-section {
